--- a/.github/workflows/gki-kernel.yml
+++ b/.github/workflows/gki-kernel.yml
@@ -50,7 +50,7 @@ on:
         type: boolean
         default: false
       BBG:
-        required: true
+        required: false
         type: boolean
         default: false
 jobs:
