--- a/.github/workflows/kernel-a12-5.10.yml
+++ b/.github/workflows/kernel-a12-5.10.yml
@@ -38,7 +38,7 @@ on:
         default: true
       BBG:
         description: '是否启用内核层面阻止对关键分区/设备节点的非法写入(LSM)？'
-        required: true
+        required: false
         type: boolean
         default: false
   
